Fix snackbar overflow on nav editor (#34661)

--- a/packages/edit-navigation/src/components/notices/style.scss
+++ b/packages/edit-navigation/src/components/notices/style.scss
@@ -1,7 +1,7 @@
 .edit-navigation-notices__snackbar-list {
 	position: fixed;
-	bottom: 20px;
-	margin-left: 20px;
+	bottom: 0;
+	padding: 20px;
 }
 
 .edit-navigation-notices__notice-list {
